--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ sudo: required
 script:
   - git config --global user.email "travis-ci@example.com"
   - git config --global user.name "Travis-CI"
-  - ./try-reflex --command "exit 0"
+  - nix-shell -p hello
+  #- ./try-reflex --command "exit 0"
   - travis_wait ./test -j 2
 cache:
   directories:
