--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+language: nix
 script:
   - git config --global user.email "travis-ci@example.com"
   - git config --global user.name "Travis-CI"
