--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - git config --global user.name "Travis-CI"
   - nix-shell -p hello --command hello
   #- ./try-reflex --command "exit 0"
-  - travis_wait ./test -j 2
+  #- travis_wait ./test -j 2
 cache:
   directories:
     - /nix
