--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - checkout
       - run: curl https://nixos.org/nix/install | sh
+      - run: echo $PATH
       - run: source ~/.nix-profile/etc/profile.d/nix.sh
+      - run: echo $PATH
       - run: nix-shell -p hello --command hello
 
