--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,6 @@ jobs:
       - run: echo $PATH
       - run: source ~/.nix-profile/etc/profile.d/nix.sh
       - run: echo $PATH
-      - run: nix-shell -p hello --command hello
+      - run: nix-env
+      #- run: nix-shell -p hello --command hello
 
