echo /Users/alexandreesteves

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,11 @@ jobs:
 
     steps:
       - checkout
+      - run: echo $HOME
       - run: curl https://nixos.org/nix/install | sh
-      - run: cat ~/.nix-profile/etc/profile.d/nix.sh
+      #- run: cat ~/.nix-profile/etc/profile.d/nix.sh
       - run: echo $PATH
-      - run: source ~/.nix-profile/etc/profile.d/nix.sh
+      # - run: source ~/.nix-profile/etc/profile.d/nix.sh # doesn't work for some reason
       - run: echo $PATH
       - run: nix-env
       #- run: nix-shell -p hello --command hello
