try BASH_ENV environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,19 @@
 version: 2
 jobs:
   build:
+    environment:
+      BASH_ENV: "~/.bash_profile"
+      
     machine: true
 
     steps:
       - checkout
-      - run: echo $HOME
+      - run: echo $PATH
       - run: curl https://nixos.org/nix/install | sh
       #- run: cat ~/.nix-profile/etc/profile.d/nix.sh
       - run: echo $PATH
-      - run: . /home/circleci/.nix-profile/etc/profile.d/nix.sh
+      #- run: . /home/circleci/.nix-profile/etc/profile.d/nix.sh
       # - run: source ~/.nix-profile/etc/profile.d/nix.sh # doesn't work for some reason
-      - run: echo $PATH
       - run: nix-env
       #- run: nix-shell -p hello --command hello
 
