--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
 
     steps:
       - checkout
-      - run: echo $PATH
+      #- run: echo $PATH
       - run: curl https://nixos.org/nix/install | sh
       #- run: cat ~/.nix-profile/etc/profile.d/nix.sh
-      - run: echo $PATH
+      #- run: echo $PATH
       #- run: . /home/circleci/.nix-profile/etc/profile.d/nix.sh
       # - run: source ~/.nix-profile/etc/profile.d/nix.sh # doesn't work for some reason
       - run: nix-env
