try nix-shell again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,6 @@ jobs:
 
     steps:
       - checkout
-      #- run: echo $PATH
       - run: curl https://nixos.org/nix/install | sh
-      #- run: cat ~/.nix-profile/etc/profile.d/nix.sh
-      #- run: echo $PATH
-      #- run: . /home/circleci/.nix-profile/etc/profile.d/nix.sh
-      # - run: source ~/.nix-profile/etc/profile.d/nix.sh # doesn't work for some reason
-      - run: nix-env
-      #- run: nix-shell -p hello --command hello
+      - run: nix-shell -p hello --command hello
 
