--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
         
       - run: nix-shell -p hello --command hello
 
-      - run: cp -r /nix/store/* ~/nix-store/
+      - run: cp -r /nix/store ~/nix-store
     
       - save_cache:
           key: my-proxy-cache
