--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             - my-proxy-cache
 
       - run: ls /nix/store
-      - run: mv ~/nix-store /nix/store
+      - run: mv ~/nix-store/* /nix/store
       - run: ls /nix/store
         
       - run: nix-shell -p hello --command hello
