--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           keys:
             - my-proxy-cache
       - run: sudo mkdir -p /nix
-      - run: mv ~/nix-store /nix/store
+      - run: sudo mv ~/nix-store /nix/store
 
       - run: ls /nix/store
       - run: curl https://nixos.org/nix/install | sh
