--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,21 +12,20 @@ jobs:
       - run: mkdir -p ~/nix-store
       - restore_cache:
           keys:
-            - my-proxy-cache
+            - my-proxy-cache-2
       - run: sudo mkdir -p /nix
       - run: sudo chown -R circleci /nix
       - run: sudo mv ~/nix-store /nix/store
 
       - run: ls /nix/store
       - run: curl https://nixos.org/nix/install | sh
+      - run: ls /nix/store        
+      - run: nix-shell -p hello --command hello
       - run: ls /nix/store
         
-      - run: nix-shell -p hello --command hello
-
       - run: cp -r /nix/store ~/nix-store
-    
       - save_cache:
-          key: my-proxy-cache
+          key: my-proxy-cache-2
           paths: ~/nix-store
 
 #
