--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run: ls /nix/store | wc
       - run: ls -l /nix/store
 
-      - run: nix-store /nix/store ~/dump
+      - run: nix-store --dump /nix/store > ~/dump
         
       - save_cache:
           key: my-dump
