--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ jobs:
 
       - run: curl https://nixos.org/nix/install | sh
 
-      - run: if [ -f "~/dump" ]; then nix-store --restore ~/dump; fi;
+      - run: ls
+      - run: if [ -f "~/dump" ]; then nix-store --restore ~/dump; else echo "bah"; fi;
 
       - run: ls /nix/store | wc
       - run: ls -l /nix/store
