--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ jobs:
       - run: curl https://nixos.org/nix/install | sh
 
       - run: ls ~
-      - run: if [ -f "$HOME/dump" ]; then nix-store --restore ~/dump; else echo "bah"; fi;
-
+#      - run: if [ -f "$HOME/dump" ]; then nix-store --restore ~/dump; else echo "bah"; fi;
+      - run: if [ -f "$HOME/dump" ]; then echo "true"; else echo "bah"; fi;
+        
       - run: ls /nix/store | wc
       - run: ls -l /nix/store
 
