--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,12 @@ jobs:
       
       - restore_cache:
           keys:
-            - my-dump2
+            - my-dump3
 
       - run: curl https://nixos.org/nix/install | sh
 
       - run: ls ~
-#      - run: if [ -f "$HOME/dump" ]; then nix-store --restore ~/dump; else echo "bah"; fi;
-      - run: if [ -f "$HOME/dump" ]; then echo "true"; else echo "bah"; fi;
+      - run: if [ -f "$HOME/dump" ]; then nix-store --import ~/dump; else echo "bah"; fi;
         
       - run: ls /nix/store | wc
       - run: ls -l /nix/store
@@ -27,10 +26,10 @@ jobs:
       - run: ls /nix/store | wc
       - run: ls -l /nix/store
 
-      - run: nix-store --dump /nix/store > ~/dump
+      - run: nix-store --export /nix/store > ~/dump
         
       - save_cache:
-          key: my-dump2
+          key: my-dump3
           paths: ~/dump
 
 
