--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 sudo: required
-script:
+install:
   - git config --global user.email "travis-ci@example.com"
   - git config --global user.name "Travis-CI"
   - nix-shell -p hello --command hello
   #- ./try-reflex --command "exit 0"
   #- travis_wait ./test -j 2
-#cache:
-#  directories:
-#    - /nix
+cache:
+  directories:
+    - /nix
 os:
   - linux
 #  - osx
