proxy nix-store

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,24 @@
 sudo: required
 language: bash
-install:  
+build:
   - git config --global user.email "travis-ci@example.com"
   - git config --global user.name "Travis-CI"
 
+  - mkdir -p ~/nix-store
   - sudo mkdir -p /nix
   - sudo chown $USER /nix
+  - sudo mv ~/nix-store /nix/store 
+  
   - curl https://nixos.org/nix/install | sh  
   - . ~/.nix-profile/etc/profile.d/nix.sh
       
   - nix-shell -p hello --command hello
+  - cp -r /nix/store ~/nix-store
   #- ./try-reflex --command "exit 0"
   #- travis_wait ./test -j 2
 cache:
   directories:
-    - /nix
+    - ~/nix-store
 os:
   - linux
   - osx
