--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - ls /nix/store | wc
   - ls -l /nix/store
 
-  - cp -r /nix ~/my-nix
+  - sudo cp -r /nix ~/my-nix
   #- ./try-reflex --command "exit 0"
   #- travis_wait ./test -j 2
 cache:
