--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run: curl https://nixos.org/nix/install | sh
       - run: ./try-reflex --command "exit 0"
-      - run: travis_wait ./test -j 2
+      - run: ./test -j 2
         
       - save_cache:
           key: my-nix-{{ epoch }}
