--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - checkout
 
+      - git config --global user.email "travis-ci@example.com"
+      - git config --global user.name "Travis-CI"
+
       - run: sudo mkdir -p /nix
       - run: sudo chown $USER /nix
       
