--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ dependencies:
     - git config --global user.email "travis-ci@example.com"
     - git config --global user.name "Travis-CI"
     - curl https://nixos.org/nix/install | sh
-    - nix-shell -p hello --command hello
+    - . ~/.nix-profile/etc/profile.d/nix.sh && nix-shell -p hello --command hello
     #- ./try-reflex --command "exit 0"
     #- ./test -j 2
   cache_directories:
