--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
 #      - run: sudo mkdir -p /nix
 #      - run: sudo chown $USER /nix      
-      - restore_cache:
-          keys:
-            - my-nix
+#      - restore_cache:
+#          keys:
+#            - my-nix
 
       - run: nix-env -i git        
       - run: git config --global user.email "travis-ci@example.com"
