--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,8 @@ jobs:
 
 #      - run: chown $USER /nix
 
-
       - run: ls -ld /
-      - run: chmod go-w /
+      - run: chmod u=rx /
       - run: ls -ld /
       - run: nix-env -i git        
       - run: git config --global user.email "travis-ci@example.com"
