Run benchmark in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,5 @@ jobs:
       - run:
           command: ./try-reflex --command "exit 0"
           no_output_timeout: 3600
+      - run: ./benchmark
       - run: ./test -j 2
