--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 script:
   - git config --global user.email "travis-ci@example.com"
   - git config --global user.name "Travis-CI"
-  - yes | ./try-reflex --command "exit 0"
+  - echo "Yes" | ./try-reflex --command "exit 0"
   - travis_wait ./test -j 2
 os:
   - linux
