--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,8 @@ image: Windows Server 2019
 
 build_script:
 - wslconfig /setdefault ubuntu
-- wsl lsb_release -a
+- wsl sudo mkdir /etc/nix; echo 'use-sqlite-wal = false' | sudo tee -a /etc/nix/nix.conf
 - wsl ./try-reflex
-- wsl echo "bump"
 
 test: off
 deploy: off
