--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ image: Windows Server 2019
 
 build_script:
 - wslconfig /setdefault ubuntu
-- wsl sudo mkdir /etc/nix; echo 'use-sqlite-wal = false' | sudo tee -a /etc/nix/nix.conf
+- wsl mkdir /etc/nix
+- wsl echo 'use-sqlite-wal = false' > /etc/nix/nix.conf
 - wsl ./try-reflex
 
 test: off
