--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,7 @@ image: Windows Server 2019
 
 build_script:
 - wslconfig /setdefault ubuntu
-- wsl unshare --user --pid echo YES
-- wsl sudo mkdir /etc/nix
-- wsl sudo echo 'use-sqlite-wal = false' > /etc/nix/nix.conf
+- wsl ./appveyor.sh
 - wsl ./try-reflex
 
 test: off
