--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ image: Windows Server 2019
 
 build_script:
 - wslconfig /setdefault ubuntu
-- wsl ./appveyor.sh
+- wsl ./appveyor.sh #'wsl sudo' doesn't work for some reason, but 'sudo' inside the script does
 - wsl ./try-reflex
 
 test: off
