--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 image: Windows Server 2019
 
 build_script:
-- wslconfig /setdefault ubuntu
+- wslconfig /setdefault ubuntu-18.04
 - wsl ./appveyor.sh #'wsl sudo' doesn't work for some reason, but 'sudo' inside the script does
 
 test: off
